# schema-validator

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  dependencies.py  main.py
app/models/: db.py  schemas.py
app/routers/: history.py  schemas.py  validate.py
app/services/: schema_builder.py  validator.py  yaml_parser.py
app/utils/: logging.py
example_data/: loan_applications.csv
example_schemas/: employees_simple.yaml  loan_applications.yaml  products.yaml
examples/: employees_simple_valid.csv  loan_applications.yaml  products_invalid.csv
tests/: test_schema_builder.py  test_validator.py  test_yaml_parser.py
