[project]
name = "schema-validator"
version = "1.0.0"
description = "A REST API for validating CSV data against YAML-configured schemas. Define column types, constraints, and cross-column relationships in a YAML file — no Python code required."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asteval>=1.0.8",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
